cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled main.cpp
        box.cpp
        box.h
        box.h
        main.h
        main.h
        BoxClass.cpp
        BoxClass.h
        BoxClass.h
        Container.cpp
        Container.h
        Container.h
        OverweightException.cpp
        OverweightException.h)
